@@ -4,7 +4,7 @@ describe "/contacts/index.html.erb" do
   include ContactsHelper
   
   before(:each) do
-    assigns[:contacts] = [ stub_model(Contact, :uuid => "12345678-0123-5678-0123-567890123456") ]
+    assigns[:contacts] = [ stub_model(Contact, :created_at => Time.now, :uuid => "12345678-0123-5678-0123-567890123456") ]
   end
 
   it "should render list of contacts" do
