@@ -1,6 +1,7 @@
 Mon, Jan 5, 2009
 ---------------------------------------------------------------------
 - Finished refatoring [Lead/Convert].
+- Started with index page for contacts.
 
 Sun, Jan 4, 2009
 ---------------------------------------------------------------------
